--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -20,8 +20,6 @@ header {
             	max-width: 80vw;	
             }
             h1 {
-            
-                font-weight: 700;
                 font-size: 50px;
                 margin-top: 0;
                 margin-bottom: 0;
